manifest/observability/monitoring/manifests/grafana/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: grafana
  name: grafana
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grafana
    spec:
      automountServiceAccountToken: false
      containers:
      - name: grafana
        image: registry.cn-hangzhou.aliyuncs.com/devops-system/grafana:11.5.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
          name: http
        readinessProbe:
          httpGet:
            path: /api/health
            port: http
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 500m
            memory: 512Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /var/lib/grafana
          name: grafana-storage
          readOnly: false
        - mountPath: /etc/grafana/provisioning/datasources
          name: grafana-datasources
          readOnly: false
        - mountPath: /usr/share/grafana/public/dashboards/home.json
          name: grafana-dashboard-home
          subPath: home.json
        - mountPath: /tmp
          name: tmp-plugins
          readOnly: false
        - mountPath: /etc/grafana
          name: grafana-config
          readOnly: false
      nodeSelector:
        kubernetes.io/os: linux
      securityContext:
        fsGroup: 65534
        runAsGroup: 65534
        runAsNonRoot: true
        runAsUser: 65534
      serviceAccountName: grafana
      volumes:
      - name: grafana-config
        secret:
          secretName: grafana-config
      - name: grafana-datasources
        secret:
          secretName: grafana-datasources
      - name: grafana-dashboard-home
        configMap:
          name: grafana-dashboard-home
      - name: grafana-storage
        persistentVolumeClaim:
          claimName: grafana
      - emptyDir:
          medium: Memory
        name: tmp-plugins
