manifest/observability/monitoring/manifests/grafana/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: grafana
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: grafana
  namespace: monitoring
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - grafana.kubeop.com
    secretName: kubeop.com-ssl
  rules:
  - host: grafana.kubeop.com
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: grafana
              port:
                number: 3000
